--- a/public/index.html
+++ b/public/index.html
@@ -25,20 +25,20 @@
     <title>ELIT Sentiment Visualization</title>
     <!-- Search Engine -->
     <meta name="description" content="The Evolution of Language and Information Technology (ELIT) brings the state-of-the-art natural language processing (NLP) and machine learning technology to the research community. The primary focus of this project is to provide an end-to-end NLP pipeline scalable for big data analysis using rich resources in the cloud. Unlike most other NLP frameworks, ELIT supports web APIs, which makes it platform independent, so researchers can enjoy large scale computing anytime anywhere. ELIT is developed by the Emory Natural Language Processing research group with an active collaboration with the Amazon MXNet team.">
-    <meta name="image" content="%PUBLIC_URL%/logo-transparent.svg">
+    <meta name="image" content="http://demo.elit.cloud//logo-transparent.svg">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="ELIT Sentiment Visualization">
     <meta itemprop="description" content="The Evolution of Language and Information Technology (ELIT) brings the state-of-the-art natural language processing (NLP) and machine learning technology to the research community. The primary focus of this project is to provide an end-to-end NLP pipeline scalable for big data analysis using rich resources in the cloud. Unlike most other NLP frameworks, ELIT supports web APIs, which makes it platform independent, so researchers can enjoy large scale computing anytime anywhere. ELIT is developed by the Emory Natural Language Processing research group with an active collaboration with the Amazon MXNet team.">
-    <meta itemprop="image" content="%PUBLIC_URL%/logo-transparent.svg">
+    <meta itemprop="image" content="http://demo.elit.cloud//logo-transparent.svg">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="ELIT Sentiment Visualization">
     <meta name="twitter:description" content="The Evolution of Language and Information Technology (ELIT) brings the state-of-the-art natural language processing (NLP) and machine learning technology to the research community. The primary focus of this project is to provide an end-to-end NLP pipeline scalable for big data analysis using rich resources in the cloud. Unlike most other NLP frameworks, ELIT supports web APIs, which makes it platform independent, so researchers can enjoy large scale computing anytime anywhere. ELIT is developed by the Emory Natural Language Processing research group with an active collaboration with the Amazon MXNet team.">
-    <meta name="twitter:image:src" content="%PUBLIC_URL%/logo-transparent.svg">
+    <meta name="twitter:image:src" content="http://demo.elit.cloud//logo-transparent.svg">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="ELIT Sentiment Visualization">
     <meta name="og:description" content="The Evolution of Language and Information Technology (ELIT) brings the state-of-the-art natural language processing (NLP) and machine learning technology to the research community. The primary focus of this project is to provide an end-to-end NLP pipeline scalable for big data analysis using rich resources in the cloud. Unlike most other NLP frameworks, ELIT supports web APIs, which makes it platform independent, so researchers can enjoy large scale computing anytime anywhere. ELIT is developed by the Emory Natural Language Processing research group with an active collaboration with the Amazon MXNet team.">
-    <meta name="og:image" content="%PUBLIC_URL%/logo-transparent.svg">
+    <meta name="og:image" content="http://demo.elit.cloud//logo-transparent.svg">
     <meta name="og:url" content="demo.elit.cloud">
     <meta name="og:site_name" content="ELIT Sentiment Visualization">
     <meta name="og:type" content="website">
